added commment about VM configuration